--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "test": "./node_modules/mocha/bin/mocha",
     "start": "node server.js",
-    "lint": "./node_modules/eslint/bin/eslint.js *"
+    "lint": "./node_modules/eslint/bin/eslint.js *",
+    "plop": "echo 'plop start'='node_plopjs.js' >> ~/.bash_profile"
   },
   "repository": {
     "type": "git",
@@ -26,7 +27,9 @@
     "body-parser": "^1.15.1",
     "express": "^4.13.4",
     "jsonwebtoken": "^7.0.0",
-    "mongoose": "^4.4.19"
+    "mongoose": "^4.4.19",
+    "nodegit": "^0.13.1",
+    "vorpal": "^1.11.1"
   },
   "devDependencies": {
     "chai": "^3.5.0",
