--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "plopjs",
   "version": "0.1.0",
   "description": "Cloud-based storage for organization-level boilerplate code",
+  "preferGlobal": true,
   "main": "server.js",
   "directories": {
     "test": "test"
