--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,8 @@
 language: node_js
 node_js:
  - 4
-services:
- - mongodb
-addons:
- apt:
-   sources:
-   - mongodb-3.2.4-precise
-   packages:
-   - mongodb-org-server
 sudo: required
 before_script: npm install
 script:
  - npm run test
- # - npm run lint
+ - npm run lint
