--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "test": "./node_modules/mocha/bin/mocha",
-    "start": "node server.js",
+    "start": "node plop.js",
     "lint": "./node_modules/eslint/bin/eslint.js *"
   },
   "bin": {
