--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "url": "git+https://github.com/PLOPdotJS/plopjs.git"
   },
   "author": {
-    "name": "Stephen Schroder <schrode50@gmail.com>"
+    "name": "Stephen Schroder <schrode50@gmail.com>",
+    "name": "Chris Perez <chris.k.perez@gmail.com>",
+    "name": "Dan Stineback <dstineback@gmail.com>"
   },
   "license": "ISC",
   "bugs": {
